fixing up the front page heading, added mobile responsiveness and removed the dot background on a mobile viewport, centered text, and decreased the letter spacing

--- a/_sass/_hightlights.scss
+++ b/_sass/_hightlights.scss
@@ -6,7 +6,7 @@
       -webkit-clip-path: polygon(50% 0%, 100% 0, 100% 85%, 25% 100%, 0% 75%, 0 0);
       background-image: linear-gradient(to right, rgba(black, .90) 50%, rgba(black, .75) 100%), url(/assets/images/ocelot-wallpaper.jpg);
       background-size: cover;
-      background-position: right center;
+      background-position: left center;
       background-repeat: repeat-y;
       width: 100%;
       position: absolute;
@@ -29,6 +29,9 @@
       left: 0;
       z-index: 1;
       box-shadow: 0 2px 3px rgba(10, 10, 10, 0.5), 0 0 0 1px rgba(10, 10, 10, 0.25);
+      @include mobile {
+        background-image: none;
+      }
     }
     .shortBackground {
       height: 25rem !important;
@@ -57,15 +60,14 @@
             //min-height: 15rem;
             text-transform: uppercase;
             letter-spacing: 1rem;
+            font-size: 3rem;
           }
-          @media screen and (min-width: 1125px) {
-            ul {
-              font-size: 4rem;
-            }
-          }
-          @media screen and (max-width: 1124px) {
-            ul {
-              font-size: 3rem;
+
+          @include mobile {
+            ul{
+              font-size: 2.5rem;
+              text-align: center;
+              letter-spacing: .5rem;
             }
           }
           animation: moveInTop .5s ease-in .5s;
